@@ -1,3 +1,12 @@
+2002-06-19  Chris Blumenberg  <cblu@apple.com>
+
+	Call setWindow in layout so that plug-in content is drawn without 
+	needing to resize.
+
+	* Plugins.subproj/IFPluginView.mm:
+	(-[IFPluginView layout]):
+	(-[IFPluginView viewHasMoved:]):
+
 2002-06-19  Kenneth Kocienda  <kocienda@apple.com>
 
         I just played alchemical voodoo games with the linker to
